# ovi-cards

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml
benchmarks/: results.json  run_benchmark.py
benchmarks/corpus/: real_and_synthetic_corpus.json
examples/: basic_usage.py
src/ovi_cards/: __init__.py  __main__.py  builder.py  mcp_server.py  models.py  schema.json  validation.py  verification.py
tests/: test_builder.py  test_models.py  test_validation.py  test_verification.py
