[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ovi-cards"
version = "0.1.0"
description = "Typed wire format for agent-to-orchestrator communication. Schema-validated, semantically verified, human-readable task cards."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andy Wetzel" }]
keywords = ["ai", "agents", "protocol", "orchestration", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "tiktoken>=0.7"]

[project.urls]
Repository = "https://github.com/Execuspeak/ovi-cards"

[tool.hatch.build.targets.wheel]
packages = ["src/ovi_cards"]
